# zk-lab

./: .gitignore  out  proof.json  proving.key  root.zok
circuits/: README.md
circuits/hash-preimage/: hash.zok  witness
circuits/hash-preimage-specific/: verification.key  verifier.sol
circuits/range/: README.md  proof.json  proving.key  range.zok
circuits/x^2/: verification.key
dkim/: Cargo.toml  canonicalize.sh  create_pubkey.sh  data_to_verify.txt  message.eml  public_key.key  public_key.pem  verify_dkim.sh
dkim/src/: main.rs
hash-preimage/: README.md  bits_to_hex.py
hash-preimage-specific/: README.md  hash.zok  witness
hash-registry/: README.md
hash-registry/frontend/: package-lock.json  package.json
hash-registry/frontend/src/: App.css  App.tsx
hash-registry/rust/: Cargo.toml  README.md  commitments
hash-registry/rust/src/: main.rs
proof-validator/: .gitignore  README.md
proof-validator/frontend/: package-lock.json
proof-validator/frontend/src/: App.css  App.tsx  index.css
proof-validator/rust/: Cargo.toml
proof-validator/rust/src/: main.rs  package-lock.json  package.json  proof.json  verify.js
range/: abi.json  out  out.r1cs  out.wtns  verification.key  witness
x^2/: README.md  verifier.sol
